# qu_gen

root/: pyproject.toml  requirements.in  requirements.txt
root/data/db/: api_index.db
root/docs/: DSL description.txt  codetutor_pipeline.txt  fever dream rambling description.txt  proj_structure.txt
root/scripts/db/: db_open.bat  init_db.bat
root/src/codetutor/adapters/python/realize/: pandas_realizer.py  realizer.py
root/src/codetutor/adapters/python/scan/: scan.py  schema.sql
root/src/codetutor/adapters/python/synth/: synth_cards.py
root/src/codetutor/core/cli/: gen_question.py
root/src/codetutor/core/dsl/: ctdsl.lark  loader.py
root/src/codetutor/core/generation/: arg_sampler.py  fixtures_auto.py  text.py
root/src/codetutor/core/planner/: compat.py  z3core.py
root/src/codetutor/core/sandbox/: inspectors.py  runner.py
root/src/codetutor/utils/: db.py
